--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "mongoose": "^8.4.0",
+    "mongoose-lean-virtuals": "^0.9.1",
     "mongoose-paginate-v2": "^1.8.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
