--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.9",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.2.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.4.0",
     "mongoose-lean-virtuals": "^0.9.1",
     "mongoose-paginate-v2": "^1.8.1",
